# goit-pyweb-hw-10

./: .gitignore  README.md  pyproject.toml
fpq/: authors.json
fpq/fpq/: settings.py  urls.py
fpq/fpq_author/: forms.py  urls.py  views.py
fpq/fpq_author/templates/fpq_author/: create.html
fpq/fpq_core/: forms.py  urls.py  views.py
fpq/fpq_core/templates/fpq_core/: form.html  index.html
fpq/fpq_core/templatetags/: extract_tags.py
fpq/fpq_quote/: forms.py  models.py  views.py
fpq/fpq_tag/: models.py
fpq/fpq_user/: forms.py  urls.py  views.py
fpq/fpq_user/templates/fpq_user/: login.html  logout.html  register.html
fpq/utils/: migration.py
