[tool.poetry]
name = "goit-pyweb-hw-10"
version = "0.1.0"
description = "Famous people quotes (FPQ) web application based on the Django framework."
authors = ["Oleksandr Horbatiuk <oleksandr.v.horbatiuk@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
